besouro/kubernetes/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: besouro-api
  labels:
    app: besouro
spec:
  type: NodePort
  selector:
    app: besouro
    tier: api
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: besouro-api
  labels:
    app: besouro
spec:
  selector:
    matchLabels:
      app: besouro
      tier: api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: besouro
        tier: api
    spec:
      containers:
      - image: besouro/api:staging
        name: api
        ports:
        - containerPort: 80
          name: api
        volumeMounts:
        - name: api-media-storage
          mountPath: /usr/share/api/html/media
      volumes:
      - name: api-media-storage
        persistentVolumeClaim:
          claimName: besouro-media-pvc
