besouro/kubernetes/ej-server-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: besouro-ej-server
  labels:
    app: besouro
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: besouro
    tier: ej-server
  type: LoadBalancer
  loadBalancerIP: 35.198.45.196
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: besouro-ej-server
  labels:
    app: besouro
spec:
  selector:
    matchLabels:
      app: besouro
      tier: ej-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: besouro
        tier: ej-server
    spec:
      containers:
      - image: besouro/ej-server:staging
        name: ej-server
        ports:
        - containerPort: 5000
          name: ej-server
        volumeMounts:
        - name: ej-server-media-storage
          mountPath: /app/staticfiles/media
      volumes:
      - name: ej-server-media-storage
        persistentVolumeClaim:
          claimName: besouro-media-pvc
