besouro/kubernetes/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: besouro-postgres
  labels:
    app: besouro
spec:
  ports:
    - port: 5432
  selector:
    app: besouro
    tier: postgres
  clusterIP: None
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: besouro-postgres
  labels:
    app: besouro
spec:
  selector:
    matchLabels:
      app: besouro
      tier: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: besouro
        tier: postgres
    spec:
      containers:
      - image: postgres:9.6
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-data-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data-storage
        persistentVolumeClaim:
          claimName: besouro-postgres-pvc
