besouro/kubernetes/rabbit-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: besouro-rabbit
  labels:
    app: besouro
spec:
  ports:
    - port: 15672
  selector:
    app: besouro
    tier: rabbit
  clusterIP: None
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: besouro-rabbit
  labels:
    app: besouro
spec:
  selector:
    matchLabels:
      app: besouro
      tier: rabbit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: besouro
        tier: rabbit
    spec:
      containers:
      - image: rabbitmq:3.6.14-management
        name: rabbit
        ports:
        - containerPort: 15672
          name: rocketchat
